# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-01 17:08:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-52

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-52


    modified files:
     ChangeLog MissingPy/FileArchive/BZip2.hs Python/Utils.hs
     glue/glue.c glue/glue.h testsrc/BZip2test.hs


2005-02-01 16:38:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Checkpointing (initial bzip2)
    Revision:
      missingexts--head--0.7--patch-51


    new files:
     MissingPy/FileArchive/BZip2.hs testsrc/BZip2test.hs
     testsrc/bz2files/.arch-ids/=id
     testsrc/bz2files/.arch-ids/empty.bz2.id
     testsrc/bz2files/.arch-ids/t1.bz2.id
     testsrc/bz2files/.arch-ids/t2.bz2.id
     testsrc/bz2files/.arch-ids/zeros.bz2.id
     testsrc/bz2files/empty.bz2 testsrc/bz2files/t1.bz2
     testsrc/bz2files/t2.bz2 testsrc/bz2files/zeros.bz2

    modified files:
     ChangeLog MissingPy.cabal MissingPy/FileArchive/GZip.hs
     testsrc/GZiptest.hs testsrc/Tests.hs

    new directories:
     testsrc/bz2files testsrc/bz2files/.arch-ids


2005-02-01 16:23:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-50

    Summary:
      GZip tests work
    Revision:
      missingexts--head--0.7--patch-50


    modified files:
     ChangeLog Python/Exceptions.hs testsrc/GZiptest.hs


2005-02-01 16:07:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-49

    Summary:
      More gzip test fixes
    Revision:
      missingexts--head--0.7--patch-49


    modified files:
     ChangeLog testsrc/GZiptest.hs


2005-02-01 16:07:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-48

    Summary:
      More gzip test fixes
    Revision:
      missingexts--head--0.7--patch-48


    modified files:
     ChangeLog testsrc/GZiptest.hs


2005-02-01 16:06:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-47

    Summary: